Updated with version: 3.37.0 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,11 @@
 
 UNRELEASED:
 
+Version: 3.37.0, Date: 2019-01-15
+- Updated translations
+- Updated YouTube Channel whitelisting feature so that the content script no longer make direct requests to the YT API as described here:
+  https://sites.google.com/a/chromium.org/dev/Home/chromium-security/extension-content-script-fetches
+
 Version: 3.36.0, Date: 2018-12-10
 - Updated translations
 - Updated 'bandaids' processing to help block ads on certain web sites.
