Updated with version: 3.38.0 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,10 @@
 
 UNRELEASED:
 
+Version: 3.38.0, Date: 2019-01-28
+- Updated to ABP Core 3.4.3
+- Fixed an issue when starting AdBlock and AdBlock had been paused when the browser was closed.
+
 Version: 3.37.0, Date: 2019-01-15
 - Updated translations
 - Updated YouTube Channel whitelisting feature so that the content script no longer make direct requests to the YT API as described here:
