Updated with version: 3.38.1 changes

--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -7,6 +7,14 @@
     "message":"The most popular Chrome extension, with over 60 million users! Blocks ads all over the web.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "name_devbuild": {
+    "description": "Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
+    "message": "AdBlock development build"
+  },
+  "name_releasebuild": {
+    "description": "Extension name to be shown for release / published builds.  Should not be translated",
+    "message": "AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. The #1 ad blocker with over 200 million downloads. Blocks ads all over the web.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
