--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -1351,6 +1351,10 @@
     "message":"Informa sobre un anunci en aquesta pàgina",
     "description":"Entry in the AdBlock button menu"
   },
+  "troubleshoot_an_ad":{
+    "message":"Resolució de problemes d'un anunci",
+    "description":"Entry in the AdBlock button menu"
+  },
   "acceptableadsoption":{
     "message":"Permet la publicitat no intrusiva",
     "description":"Checkbox on the 'General' tab of the Options page to enable the Acceptable Ads filter list"
