--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -1351,6 +1351,10 @@
     "message":"דווח על פרסומת בעמוד זה",
     "description":"Entry in the AdBlock button menu"
   },
+  "troubleshoot_an_ad":{
+    "message":"פתור תקלת פרסומת",
+    "description":"Entry in the AdBlock button menu"
+  },
   "acceptableadsoption":{
     "message":"התר מעט פרסום בלתי־פולשני",
     "description":"Checkbox on the 'General' tab of the Options page to enable the Acceptable Ads filter list"
