--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -1,4 +1,12 @@
 {
+  "description":{
+    "message":"6천만 명 이상의 선택을 받은 가장 유명한 Chrome 확장 프로그램! 웹상의 광고를 차단할 수 있습니다.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
+  "description2":{
+    "message":"6천만 명 이상의 선택을 받은 가장 유명한 Chrome 확장 프로그램! 웹상의 광고를 차단할 수 있습니다.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
   "description_edge":{
     "message":"AdBlock. 2억 회 이상 다운로드된 1위 광고 차단기. 인터넷의 모든 광고를 차단하세요.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -469,6 +477,10 @@
   },
   "filterturkish":{
     "message":"터키어",
+    "description":"A filter list"
+  },
+  "filteranticircumvent":{
+    "message":"차단 회피를 차단하는 필터",
     "description":"A filter list"
   },
   "blacklistclickmessage":{
@@ -1339,6 +1351,10 @@
     "message":"미차단 광고 보고",
     "description":"Entry in the AdBlock button menu"
   },
+  "troubleshoot_an_ad":{
+    "message":"광고 문제 해결",
+    "description":"Entry in the AdBlock button menu"
+  },
   "acceptableadsoption":{
     "message":"비침입형 광고 허용",
     "description":"Checkbox on the 'General' tab of the Options page to enable the Acceptable Ads filter list"
@@ -1580,6 +1596,10 @@
   "contributors":{
     "message":"AdBlock을 만드는 사람을 소개하는 [[페이지]] 또한 확인하실 수 있습니다!",
     "description":"Link to the contributors page on the Support tab"
+  },
+  "debuginfo":{
+    "message":"저희 팀으로부터 디버그 정보를 요청받으셨나요? [[여기]]를 클릭해주세요!",
+    "description":"Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport":{
     "message":"문제가 생겼나요? [[버그 리포트]]로 알려주세요.",
@@ -1868,5 +1888,29 @@
   "landscapechannelswitchlabel":{
     "message":"풍경",
     "description":"The label text for the Landscape switch on the MyAdBlock Options page"
+  },
+  "urgent_safari_changes":{
+    "message":"긴급: 곧 Apple이 Safari 확장 프로그램을 폐지합니다.",
+    "description":"Title for Options page message letting users know of settings change."
+  },
+  "settings_changed":{
+    "message":"이제 AdBlock이 전과는 다르게 동작하게 되며, 몇몇 설정들이 변경되었습니다.",
+    "description":"Part of Options page message letting users know of settings change."
+  },
+  "learn_more":{
+    "message":"자세히 알아보세요.",
+    "description":"Link to Knowledge Base article with more information about the settings change"
+  },
+  "download_mac_app":{
+    "message":"Mac에서 최상의 AdBlock 경험을 원하신다면, [[AdBlock for Safari]] 앱을 다운로드하세요!",
+    "description":"Link to download our Mac App. [[ and ]] will be replaced with HTML to link to the Mac App Store"
+  },
+  "note":{
+    "message":"참고:",
+    "description":"Indicates that the user should take note of the message that follows."
+  },
+  "changes_to_adblock":{
+    "message":"AdBlock에 변경점이 있습니다!",
+    "description":"Link to Options page with more information about the changes."
   }
 }
