--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -1,7 +1,19 @@
 {
+  "description":{
+    "message":"Cea mai populară extensie pentru Chrome, cu peste 60 de milioane de utilizatori! Blochează orice reclamă de pe web.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
+  "description2":{
+    "message":"Cea mai populară extensie pentru Chrome, cu peste 60 de milioane de utilizatori! Blochează orice reclamă de pe web.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
   "description_edge":{
     "message":"AdBlock. Nr.1 în blocarea reclamelor cu peste 200 de milioane de descărcări. Blochează toate reclamele în tot internetul.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
+  },
+  "description_yt":{
+    "message":"Singurul blocant de anunțuri YouTube™ creat de AdBlock, cea mai populară extensie Chrome cu 60 de milioane de utilizatori din lume",
+    "description":"Description for the AdBlock on YouTube extension. Should not exceed 132 characters."
   },
   "name_adblock_on_youtube":{
     "message":"AdBlock pe YouTube™",
@@ -238,6 +250,10 @@
   "generaloptions":{
     "message":"Opțiuni generale",
     "description":"Title of the first Options page tab"
+  },
+  "mac_app_message_options":{
+    "message":"AdBlock pentru Safari este acum disponibil ca aplicație pentru Mac!",
+    "description":"Message to users on the Options page"
   },
   "betalabel":{
     "message":"Beta",
@@ -623,6 +639,10 @@
     "message":"Ucraineană",
     "description":"Language name"
   },
+  "lang_arabic":{
+    "message":"Arabă",
+    "description":"Language name"
+  },
   "lang_bulgarian":{
     "message":"Bulgară",
     "description":"Language name"
@@ -637,6 +657,10 @@
   },
   "lang_dutch":{
     "message":"Olandeză",
+    "description":"Language name"
+  },
+  "lang_estonian":{
+    "message":"Estonă",
     "description":"Language name"
   },
   "lang_finnish":{
@@ -663,6 +687,10 @@
     "message":"Indoneziană",
     "description":"Language name"
   },
+  "lang_icelandic":{
+    "message":"Islandeză",
+    "description":"Language name"
+  },
   "lang_israeli":{
     "message":"Ebraică",
     "description":"Language name"
@@ -677,6 +705,10 @@
   },
   "lang_korean":{
     "message":"Coreeană",
+    "description":"Language name"
+  },
+  "lang_lithuania":{
+    "message":"Lituaniană",
     "description":"Language name"
   },
   "lang_polish":{
@@ -699,13 +731,61 @@
     "message":"Turcă",
     "description":"Language name"
   },
+  "lang_catalan":{
+    "message":"Catalană",
+    "description":"Language name"
+  },
+  "lang_chinese_simplified":{
+    "message":"Chineză simplificată",
+    "description":"Language name"
+  },
+  "lang_chinese_traditional":{
+    "message":"Chineză tradițională",
+    "description":"Language name"
+  },
+  "lang_croatian":{
+    "message":"Croată",
+    "description":"Language name"
+  },
+  "lang_norwegian":{
+    "message":"Norvegiană",
+    "description":"Language name"
+  },
+  "lang_serbian":{
+    "message":"Sârbă",
+    "description":"Language name"
+  },
+  "lang_slovenian":{
+    "message":"Slovenă",
+    "description":"Language name"
+  },
+  "lang_vietnamese":{
+    "message":"Vietnameză",
+    "description":"Language name"
+  },
+  "lang_portuguese_brazil":{
+    "message":"Portugheză (Brazilia)",
+    "description":"Language name"
+  },
+  "lang_portuguese_portugal":{
+    "message":"Portugheză (Portugalia)",
+    "description":"Language name"
+  },
   "filtereasylist_plus_bulgarian":{
     "message":"Bulgară",
     "description":"A filter list"
   },
+  "filter_easylist_plus_bulgarian":{
+    "message":"Bulgară + EasyList",
+    "description":"A filter list combined with EasyList"
+  },
   "filterchinese":{
     "message":"Chineză",
     "description":"A filter list"
+  },
+  "filter_chinese":{
+    "message":"Chineză + EasyList",
+    "description":"A filter list combined with EasyList"
   },
   "filterdanish":{
     "message":"Daneză",
@@ -715,6 +795,10 @@
     "message":"Olandeză",
     "description":"A filter list"
   },
+  "filter_dutch":{
+    "message":"Olandeză + EasyList",
+    "description":"A filter list combined with EasyList"
+  },
   "filtereasylist_plus_finnish":{
     "message":"Finlandeză",
     "description":"A filter list"
@@ -723,9 +807,17 @@
     "message":"Franceză",
     "description":"A filter list"
   },
+  "filter_easylist_plus_french":{
+    "message":"Franceză + EasyList",
+    "description":"A filter list combined with EasyList"
+  },
   "filtereasylist_plus_german":{
     "message":"Germană",
     "description":"A filter list"
+  },
+  "filter_easylist_plus_german":{
+    "message":"Germană + EasyList",
+    "description":"A filter list combined with EasyList"
   },
   "filtereasylist_plus_greek":{
     "message":"Greacă",
@@ -739,13 +831,25 @@
     "message":"Ebraică",
     "description":"A filter list"
   },
+  "filter_israeli":{
+    "message":"Ebraică + EasyList",
+    "description":"A filter list combined with EasyList"
+  },
   "filteritalian":{
     "message":"Italiană",
     "description":"A filter list"
   },
+  "filter_italian":{
+    "message":"Italiană + EasyList",
+    "description":"A filter list combined with EasyList"
+  },
   "filterjapanese":{
     "message":"Japoneză",
     "description":"A filter list"
+  },
+  "filternorwegian":{
+    "message":"Norvegiană",
+    "description":"A filter lsit"
   },
   "filtereasylist_plun_korean":{
     "message":"Coreeană",
@@ -759,9 +863,17 @@
     "message":"Română",
     "description":"A filter list"
   },
+  "filter_easylist_plus_romanian":{
+    "message":"Română + EasyList",
+    "description":"A filter list combined with EasyList"
+  },
   "filtereasylist_plus_spanish":{
     "message":"Spaniolă",
     "description":"A filter list"
+  },
+  "filtereasylist_plus_vietnamese":{
+    "message":"Vietnameză",
+    "description":"A filter list combined with EasyList"
   },
   "other":{
     "message":"Alte",
@@ -950,6 +1062,14 @@
   "pause_adblock":{
     "message":"Pauzează AdBlock",
     "description":"Menu entry to pause AdBlock (stop blocking ads)"
+  },
+  "unpause_adblocking":{
+    "message":"Pornește blocarea anunțurilor",
+    "description":"Menu entry to unpause the extension (start blocking ads again)"
+  },
+  "pause_adblocking":{
+    "message":"Oprește blocarea anunțurilor",
+    "description":"Menu entry to pause the extension (stop blocking ads)"
   },
   "undo_last_block":{
     "message":"Anulare blocajele mele pe acest domeniu",
