--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -1,4 +1,12 @@
 {
+  "description":{
+    "message":"Най-популярното разширение за Chrome с над 60 милиона потребители! Блокира реклами в световната мрежа.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
+  "description2":{
+    "message":"Най-популярното разширение за Chrome с над 60 милиона потребители! Блокира реклами в световната мрежа.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
   "description_edge":{
     "message":"AdBlock. Блокер на реклами №1 с над 200 милиона изтегляния! Блокира реклами в световната мрежа.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -469,6 +477,10 @@
   },
   "filterturkish":{
     "message":"турски",
+    "description":"A filter list"
+  },
+  "filteranticircumvent":{
+    "message":"Разреши противозаобикалящия филтър",
     "description":"A filter list"
   },
   "blacklistclickmessage":{
@@ -1339,6 +1351,10 @@
     "message":"Докладвай реклама в страницата",
     "description":"Entry in the AdBlock button menu"
   },
+  "troubleshoot_an_ad":{
+    "message":"Отстрани реклама",
+    "description":"Entry in the AdBlock button menu"
+  },
   "acceptableadsoption":{
     "message":"Позволи определени ненатрапчиви реклами",
     "description":"Checkbox on the 'General' tab of the Options page to enable the Acceptable Ads filter list"
@@ -1580,6 +1596,10 @@
   "contributors":{
     "message":"А на тази [[страница]] ще откриете хората, които стоят зад AdBlock!",
     "description":"Link to the contributors page on the Support tab"
+  },
+  "debuginfo":{
+    "message":"Изискват се предпроверочни данни? Щракнете [[тук]], за да ги предадете!",
+    "description":"Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport":{
     "message":"Бихте ли изпратил [[доклад за грешка]]?",
@@ -1868,5 +1888,29 @@
   "landscapechannelswitchlabel":{
     "message":"Пейзажи",
     "description":"The label text for the Landscape switch on the MyAdBlock Options page"
+  },
+  "urgent_safari_changes":{
+    "message":"СПЕШНО: Apple промени разширенията в Safari.",
+    "description":"Title for Options page message letting users know of settings change."
+  },
+  "settings_changed":{
+    "message":"Междувременно, AdBlock вече работи по друг начин и някои от вашите настройки вероятно са променени.",
+    "description":"Part of Options page message letting users know of settings change."
+  },
+  "learn_more":{
+    "message":"Повече",
+    "description":"Link to Knowledge Base article with more information about the settings change"
+  },
+  "download_mac_app":{
+    "message":"За най-добра работа AdBlock във вашия Mac, моля, изтеглете нашия [[ап за Mac AdBlock за Safari!]]",
+    "description":"Link to download our Mac App. [[ and ]] will be replaced with HTML to link to the Mac App Store"
+  },
+  "note":{
+    "message":"ЗАБЕЛЕЖКА:",
+    "description":"Indicates that the user should take note of the message that follows."
+  },
+  "changes_to_adblock":{
+    "message":"Има промени в AdBlock!",
+    "description":"Link to Options page with more information about the changes."
   }
 }
