--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -1,4 +1,16 @@
 {
+  "description":{
+    "message":"Nejpopulárnější rozšíření pro Chrome s více než 60 milióny uživatelů! Blokuje reklamy po celém webu.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
+  "description2":{
+    "message":"Nejpopulárnější rozšíření pro Chrome s více než 60 milióny uživatelů! Blokuje reklamy po celém webu.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
+  "description_edge":{
+    "message":"AdBlock. Jednička v blokování reklam s více než 200 milióny stažení. Blokuje reklamy po celém webu.",
+    "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
+  },
   "name_adblock_on_youtube":{
     "message":"AdBlock na YouTube™",
     "description":"Name of version of the AdBlock extension that only blocks ads on YouTube. Other strings that refer to the 'AdBlock on YouTube' extension should use this name."
@@ -171,16 +183,12 @@
     "message":"Nespouštět AdBlock na...",
     "description":"The title of the whitelist wizard (Don't run on this page\/pages on this domain)"
   },
-  "buttonexclude":{
-    "message":"Uložit",
-    "description":"Button for excluding a domain in the whitelist wizard"
-  },
   "reloadpageafterwhitelist":{
     "message":"Znovu načíst stránku.",
     "description":"Checkbox in the whitelist wizard"
   },
   "wizardcantrunonframesets":{
-    "message":"Tato funkce AdBlock-u nebude fungovat na tomto webu, protože používá zastaralou technologii. Můžete povolit nebo zakázat zdroje ručně v panelu 'Přizpůsobit' na stránce Možností.",
+    "message":"Tato funkce AdBlocku nebude fungovat na této webové stránce, jelikož využívá zastaralou technologii. Obsah můžete ručně přidat na černou nebo bílou listinu v možnostech v záložce \"Přizpůsobení\".",
     "description":"Alert shown when the user tries to use a blacklist\/whitelist wizard on an old website"
   },
   "subscribeconfirm":{
@@ -1111,6 +1119,10 @@
     "message":"Nespouštět na stránkách na této doméně",
     "description":"Menu entry to open the whitelist wizard"
   },
+  "dont_run_on_pages_on_site":{
+    "message":"Nespouštět na stránkách této webové stránky",
+    "description":"Menu entry to open the whitelist wizard"
+  },
   "disabled_on_this_page":{
     "message":"AdBlock je zakázán na této stránce.",
     "description":"Message shown in toolbar button on web pages that have been whitelisted"
@@ -1132,11 +1144,11 @@
     "description":"Message shown in toolbar button when AdBlock is not running"
   },
   "status_universal_paused":{
-    "message":"AdBlock je pozastaven na všech stránkách.",
+    "message":"AdBlock je pozastaven na všech webových stránkách.",
     "description":"Message shown in toolbar button when AdBlock is not running on all domains"
   },
   "status_domain_paused":{
-    "message":"AdBlock je pozastaven na této stránce.",
+    "message":"AdBlock je pozastaven na této webové stránce.",
     "description":"Message shown in toolbar button when AdBlock is not running on a specific domain"
   },
   "resume_blocking_ads":{
@@ -1160,7 +1172,7 @@
     "description":"Menu entry to pause AdBlock everywhere (stop blocking ads)"
   },
   "domain_pause_adblock":{
-    "message":"Pozastavit na této stránce",
+    "message":"Pozastavit na této webové stránce",
     "description":"Menu entry to pause AdBlock on this domain (stop blocking ads)"
   },
   "unpause_adblocking":{
@@ -1180,7 +1192,7 @@
     "description":"Menu entry to let the user cancel the result of running the blacklist wizard."
   },
   "dont_run_on_this_page":{
-    "message":"Nepoužívat na této stránce",
+    "message":"Nespouštět na této stránce",
     "description":"Menu entry to whitelist the current page"
   },
   "options":{
@@ -1231,8 +1243,12 @@
     "message":"Nahlásit reklamu na této stránce",
     "description":"Entry in the AdBlock button menu"
   },
+  "troubleshoot_an_ad":{
+    "message":"Nahlaste reklamu",
+    "description":"Entry in the AdBlock button menu"
+  },
   "acceptableadsoption":{
-    "message":"Povolit nějaké nedotěrné reklamy",
+    "message":"Povolit nějaké nerušivé reklamy",
     "description":"Checkbox on the 'General' tab of the Options page to enable the Acceptable Ads filter list"
   },
   "advanced_options2":{
@@ -1244,7 +1260,7 @@
     "description":"Advanced Options page checkbox, which users only need to use if Hulu.com videos break. It directs the user to restart their browser in order for changes to the checkbox to take effect."
   },
   "modifydomain":{
-    "message":"Doména:",
+    "message":"Webová stránka:",
     "description":"Caption for the whitelist wizard slider that modifies the domain part of a URL"
   },
   "modifypath":{
