--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -208,7 +208,7 @@
     "description":"Checkbox in the whitelist wizard"
   },
   "wizardcantrunonframesets":{
-    "message":"This AdBlock feature does not work on this site because it uses out of date technology. You can blacklist or whitelist resources manually in the 'Customize' tab of the Options page.",
+    "message":"This AdBlock feature does not work on this site because it uses out of date technology. You can blacklist or whitelist resources manually in the 'Customize' tab of the options page.",
     "description":"Alert shown when the user tries to use a blacklist\/whitelist wizard on an old website"
   },
   "subscribeconfirm":{
@@ -960,7 +960,7 @@
     "description":"A filter list"
   },
   "filternorwegian":{
-    "message": "Norwegian",
+    "message":"Norwegian",
     "description":"A filter lsit"
   },
   "filtereasylist_plun_korean":{
@@ -1873,6 +1873,14 @@
     "message":"Enable MyAdBlock",
     "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
   },
+  "adblockprotectenrollmentbutton":{
+    "message":"Try Now — It’s Free",
+    "description":"The text of the button in the menu item in the popup menu for AdBlock Protect extension.  Will automatically be converted to all uppercase"
+  },
+  "adblockprotectenrollmenttext":{
+    "message":"Keep your personal information safe with AdBlock Protect",
+    "description":"The text of the menu item in the popup menu that takes users for the AdBlock Protect extension"
+  },
   "myadblockoptionspageheader":{
     "message":"MyAdBlock Options",
     "description":"The text of the header the MyAdBlock Options page"
@@ -1920,5 +1928,33 @@
   "changes_to_adblock":{
     "message":"We've made changes to AdBlock!",
     "description":"Link to Options page with more information about the changes."
+  },
+  "new_myadblock_feature_available":{
+    "message":"Click here to unlock new features!",
+    "description":"The text in the popup menu item saying there is a new MyAdBlock feature and takes you to the MyAdBlock tab in the option page."
+  },
+  "images_coming_soon":{
+    "message":"More photos coming soon!",
+    "description":"The text telling MyAdBlock active users that there will be more photos for MyAdBlock."
+  },
+  "myadblock_pic_replacemenet_description":{
+    "message":"Replace ads with images you love",
+    "description":"The text briefly describing what the feature does in the MyAdBlock tab in the option page."
+  },
+  "myadblock_payment_not_available_title":{
+    "message":"OH NO! We were unable to connect to our servers",
+    "description":"The title of an error message box in the MyAdBlock tab in option page when we cannot load iframe."
+  },
+  "myadblock_payment_not_available_text":{
+    "message":"We’re so glad you are interested in MyAdBlock! Unfortunately, we can’t process payments at this time. Please try again later.",
+    "description":"The text of an error message box in the MyAdBlock tab in option page when we cannot load iframe."
+  },
+  "myadblock_options_page_header":{
+    "message":"MyAdBlock",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblock_picreplacement_exlained":{
+    "message":"Select from the categories below and AdBlock will occasionally replace ads with high-quality images to brighten your day.",
+    "description":"The label text for the switch on the MyAdBlock Options page"
   }
 }
