--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -1,4 +1,12 @@
 {
+  "description":{
+    "message":"A legnépszerűbb Chrome kiegészítő, több mint 60 millió felhasználóval! Reklámokat blokkol szerte a weben.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
+  "description2":{
+    "message":"A legnépszerűbb Chrome kiegészítő, több mint 60 millió felhasználóval! Reklámokat blokkol szerte a weben.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
   "description_edge":{
     "message":"AdBlock. Az elsőszámú hirdetés blokkoló, több mint 200 millió letöltéssel. Blokkolja a hirdetéseket szerte a hálón.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -243,6 +251,10 @@
     "message":"Általános opciók",
     "description":"Title of the first Options page tab"
   },
+  "mac_app_message_options":{
+    "message":"Az AdBlock már elérhető a Safari-hoz Mac appként!",
+    "description":"Message to users on the Options page"
+  },
   "betalabel":{
     "message":"Béta",
     "description":"Label for experimental features in AdBlock Options"
@@ -465,6 +477,10 @@
   },
   "filterturkish":{
     "message":"Török",
+    "description":"A filter list"
+  },
+  "filteranticircumvent":{
+    "message":"Megkerülés elleni szűrők",
     "description":"A filter list"
   },
   "blacklistclickmessage":{
@@ -1335,6 +1351,10 @@
     "message":"Hirdetés bejelentése ezen az oldalon",
     "description":"Entry in the AdBlock button menu"
   },
+  "troubleshoot_an_ad":{
+    "message":"Hirdetés hibaelhárítása",
+    "description":"Entry in the AdBlock button menu"
+  },
   "acceptableadsoption":{
     "message":"Néhány nem tolakodó hirdetés engedélyezése",
     "description":"Checkbox on the 'General' tab of the Options page to enable the Acceptable Ads filter list"
@@ -1382,6 +1402,14 @@
   "firefox_explanation":{
     "message":"Ezen kérdésnek célja, hogy meghatározza, ki kapja meg az Ön jelentését. Ha helytelenül válaszolja meg e kérdést, a jelentés rossz embereknek lesz elküldve, így lehet, hogy figyelembe se lesz véve.",
     "description":"Explanation of the 'Check in Firefox or Chrome' step on the ad report page"
+  },
+  "mac_app_message_menu_part_one":{
+    "message":"Új!",
+    "description":"part one of the message to safari users on the popup menu"
+  },
+  "mac_app_message_menu_part_two":{
+    "message":"Próbáld ki az AdBlock Mac appot",
+    "description":"part two of the message to safari users on the popup menu"
   },
   "blocked_ads":{
     "message":"Blokkolt hirdetések:",
@@ -1568,6 +1596,10 @@
   "contributors":{
     "message":"Van egy oldalunk, amely az [[AdBlock mögött álló emberek]]et is segít megismerni!",
     "description":"Link to the contributors page on the Support tab"
+  },
+  "debuginfo":{
+    "message":"Csapatunk némi hibakeresési infót kért? Ehhoz kattints [[here]]!",
+    "description":"Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport":{
     "message":"Miért nem küld nekünk [[hibajelentést]]?",
@@ -1856,5 +1888,29 @@
   "landscapechannelswitchlabel":{
     "message":"Tájak",
     "description":"The label text for the Landscape switch on the MyAdBlock Options page"
+  },
+  "urgent_safari_changes":{
+    "message":"SÜRGŐS: Az Apple módosítja a Safari bővítményeket.",
+    "description":"Title for Options page message letting users know of settings change."
+  },
+  "settings_changed":{
+    "message":"Az ehhez való előkészülés érdekében az AdBlock immár másképpen működik, és néhány beállításod esetleg megváltozhatott.",
+    "description":"Part of Options page message letting users know of settings change."
+  },
+  "learn_more":{
+    "message":"Bővebben.",
+    "description":"Link to Knowledge Base article with more information about the settings change"
+  },
+  "download_mac_app":{
+    "message":"A Mac-en való legjobb élmény elérése érdekében kérlek töltsd le az [[AdBlock Appunkat Safari-ra Mac-en!]]",
+    "description":"Link to download our Mac App. [[ and ]] will be replaced with HTML to link to the Mac App Store"
+  },
+  "note":{
+    "message":"MEGJEGYZÉS:",
+    "description":"Indicates that the user should take note of the message that follows."
+  },
+  "changes_to_adblock":{
+    "message":"Módosítottunk az AdBlock-on!",
+    "description":"Link to Options page with more information about the changes."
   }
 }
