--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -1,4 +1,12 @@
 {
+  "description":{
+    "message":"Sambungan Chrome yang paling popular, dengan hampir 60 juta pengguna! Sekat iklan di seluruh web.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
+  "description2":{
+    "message":"Sambungan Chrome yang paling popular, dengan hampir 60 juta pengguna! Sekat iklan di seluruh web.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
   "description_edge":{
     "message":"AdBlock. Penyekat iklan No. 1 dengan lebih 200 juta muat turun. Sekat iklan di seluruh web.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -243,6 +251,10 @@
     "message":"Tetapan umum",
     "description":"Title of the first Options page tab"
   },
+  "mac_app_message_options":{
+    "message":"AdBlock untuk Safari kini boleh didapati sebagai aplikasi Mac!",
+    "description":"Message to users on the Options page"
+  },
   "betalabel":{
     "message":"Beta",
     "description":"Label for experimental features in AdBlock Options"
@@ -330,6 +342,10 @@
   "ab_filters_subscription_lastDownload_invalidURL":{
     "message":"Gagal, bukan alamt yang sah",
     "description":"Filter lists tab of the Options page: Message when you subscribe to a non-list URL."
+  },
+  "ab_filters_subscription_lastDownload_connectionError":{
+    "message":"Gagal, kemas kini gagal",
+    "description":"Filter lists tab of the Options page: Generic filter list download error message."
   },
   "ab_filters_subscription_lastDownload_invalidData":{
     "message":"Gagal, bukan senarai penapis yang sah",
@@ -463,6 +479,10 @@
     "message":"Turki",
     "description":"A filter list"
   },
+  "filteranticircumvent":{
+    "message":"Penapis Anti-Circumvention",
+    "description":"A filter list"
+  },
   "blacklistclickmessage":{
     "message":"Klik kanan pada iklan di halaman untuk menyekatnya -- atau sekatnya di sini secara manual.",
     "description":"'Hide a section of a webpage' part on the Customize tab of the Options page."
@@ -571,6 +591,10 @@
     "message":"Patutkah AdBlock memberitahu anda apabila ia mengesan perisian hasad?",
     "description":"Checkbox displayed when subscribing to the 'Malware protection' filter list on the Filter lists tab of the Options page"
   },
+  "malwarenotificationmessage":{
+    "message":"AdBlock telah menyekat muat turun dari tapak yang mengehos perisian hasad.",
+    "description":"Notification when a potential malware request has been blocked. This message should be under 90 characters!"
+  },
   "malwarenotificationlearnmore":{
     "message":"Ketahui lebih lanjut mengenai perisian hasad",
     "description":"Button on the malware notification that opens a page about malware on the AdBlock website. Message should be under 45 characters!"
@@ -582,6 +606,10 @@
   "malwarecheck":{
     "message":"Semak perisian hasad yang mungkin mensasar iklan:",
     "description":"Section header on the ad report page"
+  },
+  "malwarewarning":{
+    "message":"Komputer anda mungkin dijangkiti dengan perisian hasad. Klik [[sini]] untuk maklumat lanjut.",
+    "description":"On the ad report page, the ads the user is seeing might be caused by malware\/adware"
   },
   "malwarenotfound":{
     "message":"Tiada perisian hasad dijumpai.",
@@ -666,6 +694,10 @@
   "disableforchromeandsafaristeptwo":{
     "message":"Nyahtanda kotak pilihan \"Dayakan\" di sebelah setiap sambungan kecuali untuk AdBlock. Biar AdBlock diaktifkan.",
     "description":"Step 2 for disabling Chrome and Safari extensions"
+  },
+  "disableforsafaristepone":{
+    "message":"Klik menu Safari > Pilihan > Sambungan.",
+    "description":"Step 1 for disabling Safari extensions"
   },
   "disableforedgestepone":{
     "message":"Klik menu Lagi (...) dan pilih Sambungan.",
@@ -1167,6 +1199,10 @@
     "message":"Maaf, AdBlock dinyahdaya pada halaman ini oleh salah satu senarai penapis anda.",
     "description":"Message shown when a user tries to unwhitelist a web page that has been whitelisted by a rule in a subscribed filter list."
   },
+  "disabled_by_filter_lists_yt":{
+    "message":"Maaf, AdBlock pada YouTube™ telah dinyahdaya di halaman ini oleh salah satu daripada tetapan anda.",
+    "description":"Message shown when a user tries to un-whitelist a web page that has been whitelisted by a rule in a subscribed filter list. Specific to the 'AdBlock on YouTube' extension."
+  },
   "dont_run_on_pages_on_domain":{
     "message":"Jangan jalankan pada halaman di domain ini",
     "description":"Menu entry to open the whitelist wizard"
@@ -1251,6 +1287,10 @@
     "message":"Peraturan Penyekatan Kandungan melebihi batas",
     "description":"Title of a notification shown to Safari Content Blocking users with too many filter list rules."
   },
+  "safarinotificationbody":{
+    "message":"Sila nyahdayakan beberapa senarai penapis. Maklumat lanjut dalam Tetapan AdBlock.",
+    "description":"Body of a notification shown to Safari Content Blocking users with too many filter list rules."
+  },
   "undo_last_block":{
     "message":"Buat asal sekatan saya di domain ini",
     "description":"Menu entry to let the user cancel the result of running the blacklist wizard."
@@ -1303,13 +1343,25 @@
     "message":"Terjemahan",
     "description":"A tab on the Options page"
   },
+  "translators":{
+    "message":"Ketahui lebih lanjut bagaimana untuk membantu menterjemah AdBlock di [[sini]]",
+    "description":"A link on the Options page \/ translators tab to a KB article about how to help translate AdBlock"
+  },
   "report_ad_on_page":{
     "message":"Laporkan iklan di halaman ini",
+    "description":"Entry in the AdBlock button menu"
+  },
+  "troubleshoot_an_ad":{
+    "message":"Selesaikan masalah iklan",
     "description":"Entry in the AdBlock button menu"
   },
   "acceptableadsoption":{
     "message":"Benarkan beberapa iklan yang tidak mengganggu",
     "description":"Checkbox on the 'General' tab of the Options page to enable the Acceptable Ads filter list"
+  },
+  "advanced_options2":{
+    "message":"Saya adalah pengguna mahir, tunjukkan tetapan yang lebih maju",
+    "description":"Checkbox on the 'General' tab of the Options page"
   },
   "work_around_hulu_problems":{
     "message":"Betulkan video Hulu.com yang tidak dimainkan (memerlukan memulakan semula pelayar anda)",
@@ -1350,6 +1402,14 @@
   "firefox_explanation":{
     "message":"Soalan ini bertujuan untuk menentukan siapa yang patut terima laporan anda. Jika anda menjawab soalan ini dengan salah, laporan itu akan dihantar kepada orang yang salah, jadi ia mungkin akan diabaikan.",
     "description":"Explanation of the 'Check in Firefox or Chrome' step on the ad report page"
+  },
+  "mac_app_message_menu_part_one":{
+    "message":"Baharu!",
+    "description":"part one of the message to safari users on the popup menu"
+  },
+  "mac_app_message_menu_part_two":{
+    "message":"Cuba aplikasi AdBlock Mac",
+    "description":"part two of the message to safari users on the popup menu"
   },
   "blocked_ads":{
     "message":"Iklan yang disekat:",
@@ -1536,6 +1596,14 @@
   "contributors":{
     "message":"Kami juga mempunyai halaman untuk membantu anda mengenali [[orang di sebalik AdBlock]]!",
     "description":"Link to the contributors page on the Support tab"
+  },
+  "debuginfo":{
+    "message":"Adakah pasukan kami meminta maklumat debug? Klik [[sini]] untuknya!",
+    "description":"Users can click this link to provide debug information to AdBlock staff"
+  },
+  "bugreport":{
+    "message":"Hantar [[laporan pepijat]]",
+    "description":"Link to send a bug report on the Support tab"
   },
   "supportsite":{
     "message":"Beritahu kami di [[tapak sokongan]] kami!",
@@ -1820,5 +1888,29 @@
   "landscapechannelswitchlabel":{
     "message":"Pemandangan",
     "description":"The label text for the Landscape switch on the MyAdBlock Options page"
+  },
+  "urgent_safari_changes":{
+    "message":"PENTING: Apple menukar sambungan Safari.",
+    "description":"Title for Options page message letting users know of settings change."
+  },
+  "settings_changed":{
+    "message":"Dalam persediaan, AdBlock kini berfungsi dengan berbeza dan sesetengah tetapan anda mungkin berubah.",
+    "description":"Part of Options page message letting users know of settings change."
+  },
+  "learn_more":{
+    "message":"Ketahui lebih lanjut.",
+    "description":"Link to Knowledge Base article with more information about the settings change"
+  },
+  "download_mac_app":{
+    "message":"Untuk mendapatkan pengalaman AdBlock terbaik pada Mac anda, sila muat turun [[Apl AdBlock untuk Safari Mac!]] kami",
+    "description":"Link to download our Mac App. [[ and ]] will be replaced with HTML to link to the Mac App Store"
+  },
+  "note":{
+    "message":"NOTA:",
+    "description":"Indicates that the user should take note of the message that follows."
+  },
+  "changes_to_adblock":{
+    "message":"Kami telah membuat perubahan kepada AdBlock!",
+    "description":"Link to Options page with more information about the changes."
   }
 }
