--- a/_locales/nb/messages.json
+++ b/_locales/nb/messages.json
@@ -1,4 +1,12 @@
 {
+  "description":{
+    "message":"Den mest populære Chrome-utvidelsen med over 40 millioner brukere! Blokkerer annonser over hele internettet.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
+  "description2":{
+    "message":"Den mest populære Chrome-utvidelsen med over 40 millioner brukere! Blokkerer annonser over hele internettet.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
   "description_edge":{
     "message":"AdBlock. Reklameblokkerer #1 med over 200 millioner nedlastninger. Blokkerer reklamer over hele internettet.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -242,6 +250,10 @@
   "generaloptions":{
     "message":"Generelle innstillinger",
     "description":"Title of the first Options page tab"
+  },
+  "mac_app_message_options":{
+    "message":"AdBlock for Safari er nå tilgjengelig som en Mac-app!",
+    "description":"Message to users on the Options page"
   },
   "betalabel":{
     "message":"Beta",
