--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,10 @@
 
 UNRELEASED:
 
+Version: 3.39.1, Date: 2019-02-06
+- Updated translations
+- Added logic to show a message about the new AdBlock Protect extension to some users
+
 Version: 3.38.1, Date: 2019-01-29
 - Fixed a typo in the extension description
 
