--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -1956,5 +1956,29 @@
   "myadblock_picreplacement_exlained":{
     "message":"Select from the categories below and AdBlock will occasionally replace ads with high-quality images to brighten your day.",
     "description":"The label text for the switch on the MyAdBlock Options page"
+  },
+  "error_msg_header":{
+    "message":"Oops! We're sorry, the AdBlock menu had trouble loading.",
+    "description":"The text on the popup menu when an error has occurred"
+  },
+  "error_msg_help_us":{
+    "message":"Help us resolve this problem by sending us some debug data: Click ",
+    "description":"The text on the popup menu when an error has occurred"
+  },
+  "error_msg_thank_you":{
+    "message":"Thank you",
+    "description":"The text on the popup menu when an error has occurred"
+  },
+  "error_msg_reload":{
+    "message":"Next, try reloading the extension: Click ",
+    "description":"The text on the popup menu when an error has occurred"
+  },
+  "error_msg_help":{
+    "message":"If that doesn't work, check here for more help: Click ",
+    "description":"The text on the popup menu when an error has occurred"
+  },
+  "error_msg_here":{
+    "message":"here",
+    "description":"The text on the popup menu when an error has occurred"
   }
 }
