--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 3.41.0, Date: 2019-02-22
+- Added error handling to the popup menu
+
 Version: 3.40.1, Date: 2019-02-14
 - Change the default values for MyAdBlock so that only a cat is initially selected
 
